syntax = "proto3";

option csharp_namespace = "GrpcGamesSeederClient";
package gameseeder;

service GamesSeeder {
  rpc SeedGamesDatabase (SeedGamesRequest) returns (SeedGamesReply);
}

message SeedGamesRequest {
}

message SeedGamesReply {
  bool seeded = 1;
}
