syntax = "proto3";

option csharp_namespace = "GrpcUsersSeederClient";
package userseeder;

service UsersSeeder {
  rpc SeedUsersDatabase (SeedUsersRequest) returns (SeedUsersReply);
}

message SeedUsersRequest {
}

message SeedUsersReply {
  bool seeded = 1;
}
